# OdometryMaxxing

./: .gitignore  BEELAND_LaunchGuide.md  README.md  bridge.sh
Calc_n_Visuals/: README_calc_vis.md  frequency_diagnostic_model.py  gain_plot.py  lateral_plots.py  mary.py  preLanding_Graphs.py  root_locus_analysis.ipynb  vertical_plots.py
Controller_logic/: README_control.md  _contention_check.py  _optFlow_targetAcqu_debug.py  _optical_flow_debug.py  _target_acquisition_debug.py  analyse_log.py  bee_node.py  clock.py  control_law.py  derotation.py  diagnostics_writer.py  lqr.py  mavsdk_worker.py  mission_routine.py  optical_flow.py  platform_motion.py  px4_interface.py  state.py  target_acquisition.py  truth_layout.py  vision_worker.py
Controller_logic/helpers/: InstallationHelper.txt  file_structure.txt
Flight_Analysis/: README_analyse.md  analyse_log.py  trajectory_gif_3panel.py
Gazebo_defs/: README.md  README_gazebo.md  flower_generator.py
Gazebo_defs/models/bee_x500/: model.config  model.sdf
Gazebo_defs/plugins/bee_landing_truth/: BeeLandingTruth.cpp  BeeLandingTruth.hpp  CMakeLists.txt  README.md
Gazebo_defs/plugins/oscillating_platform_controller/: CMakeLists.txt  MovingPlatformController.cpp  MovingPlatformController.hpp
Gazebo_defs/worlds/: bee_platform.sdf  platform_motion_examples.sdf
Gazebo_defs/worlds/materials/meshes/: flower_disc.mtl
Guides_n_Tutorials/: BEELAND_InstallGuide.md  BEELAND_LaunchGuide.md
OpenLoop_Test/: calibration_node.py  calibration_sequence.py  diagnostics_writer.py  fit_axis_models.py  lqr.py  optical_flow.py  state.py  target_acquisition.py
Python_comm/: InstallationHelper.txt  _optFlow_targetAcqu_debug.py  _optical_flow_debug.py  bee_node.py  control_law.py  lqr.py  optFlow_targetAcqu_debug.py  optical_flow.py  state.py  target_acquisition.py
Python_comm/helpers/: simple_comm.py  takeoff.py
